# miniSTL

./: CMakeLists.txt  README.md
headers/: allocator_simple.h  whichOneToRun.h
sources/: allocator_simple.cpp
